--- a/style.css
+++ b/style.css
@@ -66,4 +66,26 @@ header .header_menu{
         font-size:18px;
         cursor: pointer;
     }
+.menu_item{
+    height:47px;
+    position:relative;
+    background-color:#e6eeff;
+    font-size:25px;
+    display: flex;
+    padding:0 10px;
+    justify-content: center;
+}
+.item{
+    float:left;
+    padding:20px;
+    cursor:pointer;
 
+}
+.item-icon{
+    font-size:16px;
+    display:inline-block;
+}
+.item:hover{
+    transition:2ms ;
+    color:#007bff;
+}
