--- a/style.css
+++ b/style.css
@@ -22,11 +22,23 @@ header .header_menu{
     right:70px;
 
 }
+.logo-icon1:hover{
+    transition:2ms ;
+    color:#007bff;
+}
 .header_center{
     flex-grow: 1;
     text-align: center;
 
 }
+.Trademark_logo{
+    position:relative;
+    bottom:150px;
+    filter: brightness(115%);
+
+}
+
+
 
 
 
@@ -44,6 +56,10 @@ header .header_menu{
         position: relative;
         right:70px;
     }
+    .logo-icon2:hover {
+        transition:2ms ;
+        color:#007bff;
+    }
     .header_bottom {
         padding: 10px 20px 20px;
         background-color:#18479e;
@@ -53,18 +69,34 @@ header .header_menu{
     .Search_container{
 
 
+        }
 
 
-    }
+
+
+
     .search_input{
         flex-grow:1;
-        font-size:18px;
-        Width:35%;
+        font-size:25px;
+        Width:50%;
+        border:1px solid #ccc;
         margin:auto;
+        padding-top:8px;
+        padding-bottom:8px;
+        padding-left:10px;
+        padding-right:50px;
+        border-radius: 12px;
     }
     .search_button{
-        font-size:18px;
+        font-size:25px;
         cursor: pointer;
+        border:none;
+        padding-top:6px;
+        padding-bottom:6px;
+        padding-right: 12px;
+        padding-left:12px;
+        border-radius: 12px;
+        margin-left:-1px;
     }
 .menu_item{
     height:47px;
