--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,6 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-*{
-    box-sizing: border-box;
-}
 .row{
     display: flex;
     flex-wrap: wrap;
@@ -56,6 +53,7 @@ body {
 
 }
 .about-company{
+
     line-height: 24px;
     margin-top: 18px;
     font-size: 16px;
@@ -111,7 +109,7 @@ body {
 
 }
 .mid-footer .list-menu .link{
-    font-size: 14px;
+    font-size: 15px;
     color: #eaeef4;
 }
 .mid-footer .li_menu{
@@ -120,4 +118,11 @@ body {
     list-style-position: inside;
     color: #eaeef4;
 }
-
+.logo-footer{
+    width: 200px ;
+    height: 100px;
+}
+.col-sm-4{
+    position: relative;
+    bottom: 50px;
+}
