--- a/css/Dangky.css
+++ b/css/Dangky.css
@@ -1,8 +1,12 @@
 body{
-    background:cyan;
+    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 }
 .container{
-    background-color:#18479e;
+    background: #ffffff;
+    box-shadow:
+            0 10px 25px rgba(0, 0, 0, 0.1),
+            0 20px 48px rgba(0, 0, 0, 0.1);
+    border: 1px solid #e1e5e9;
     height:484px;
     width:430px;
     margin-top:300px;
@@ -16,14 +20,14 @@ body{
     top:45px;
     text-align:center;
     font-size:30px;
-    color:white;
+    color:black;
 }
 .row-2{
     width:100%;
     height:50px;
     position:relative;
     top:65px;
-    color:white;
+    color:black;
 }
 .row-3{
     width:100%;
@@ -33,7 +37,10 @@ body{
     top:55px;
 }
 .register_button{
-    background-color:#f5df4d;
+    background-color:#3c69e6;
     border-radius:15px;
     width:80%;
+    border:none;
+    color:white;
+    font-size:20px;
 }
