--- a/css/Hướng dẫn mua hàng style.css
+++ b/css/Hướng dẫn mua hàng style.css
@@ -6,23 +6,23 @@
     padding-bottom: 1rem;
 }
 .b1{
-    display: block;
-    font-size: 50px;
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 .b2, .b3 {
     width: 100%;
 }
 .otg-mz4{
-    background: #fff;
-    padding: 0 35px 35px 35px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 0px 0px 20px 0px rgba(212, 217, 234, 0.45);
-    border-radius: 15px;
-    position: relative;
+        background: #fff;
+        padding: 0 35px 35px 35px;
+        box-shadow: 0px 0px 20px 0px rgba(212, 217, 234, 0.45);
+        border-radius: 15px;
+        position: relative;
 }
 .p{
     font-size: 16px ;
 }
+
 
