--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,17 @@
 .main {
     background-color: white;
 }
-p {
-    margin-top: 0;
-    margin-bottom: 1rem;
-}
+
 body {
     background: #fff;
     overflow-x: hidden;
     max-width: 100%;
     font-family: 'Inter', sans-serif;
 
+}
+p {
+    margin-top: 0;
+    margin-bottom: 1rem;
 }
 .footer{
     display: block;
@@ -32,7 +33,7 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-.row{
+.rows{
     display: flex;
     flex-wrap: wrap;
     padding-top: 10px;
