--- a/css/Listproducts.css
+++ b/css/Listproducts.css
@@ -519,6 +519,7 @@ body {
     padding-bottom: 6px;
     list-style-position: inside;
     color: #eaeef4;
+    cursor:pointer;
 }
 .logo-footer{
     width: 200px ;
