--- a/css/Mainpage.css
+++ b/css/Mainpage.css
@@ -369,6 +369,7 @@ p {
     padding-bottom: 6px;
     list-style-position: inside;
     color: #eaeef4;
+    cursor: pointer;
 }
 .logo-footer{
     width: 200px ;
