--- a/css/Payment.css
+++ b/css/Payment.css
@@ -295,6 +295,7 @@ form {
     padding-right: 0px;
     padding-bottom: 0px;
     padding-left: 0px;
+    cursor:pointer;
 
 }
 .mid-footer .list-menu .link{
