--- a/css/ProductDetail.css
+++ b/css/ProductDetail.css
@@ -475,6 +475,7 @@
     padding-right: 0px;
     padding-bottom: 0px;
     padding-left: 0px;
+    cursor:pointer;
 
 }
 .mid-footer .list-menu .link{
